# projects-and-stuff

./: README.md
complexity/project/: README.md  make_dataset.py  plots.py
docker/lab1/: Dockerfile  README.md  docker-compose.yml  nginx.conf
docker/lab1/html/: index.html
docker/lab2_3/: .dockerignore  Dockerfile  README.md  cars_car_sample_data.sql  cars_driver_sample_data.sql  docker-compose.yml
docker/lab2_3/myproject/: settings.py
docker/lab4/: .dockerignore  Dockerfile.build  Dockerfile.runtime  Dockerfile.system  README.md  go.mod
docker/lab5/: .env  README.md  docker-compose.yml
docker/lab5/react-frontend/: .dockerignore  .env  Dockerfile
docker/lab5/spring-backend/: Dockerfile
formal languages/EarleyParser/: README.md  grammar.py  input.txt  io_handler.py  main.py  parser.py  tests.py
golang/basics/forth/: eval.go
golang/basics/hogwarts/: courselist.go
golang/basics/hotelbusiness/: hotels.go
golang/basics/speller/: speller.go
golang/helloworld/: README.md
math stat praс/: README.md  Мат стат_1 (супер круто).ipynb
networks/TCP/: README.md  protocol.py  protocol_test.py
python prac/cryptographer-decryptor/: README.md  Requirements.txt  UML.uml  launch_guide.txt  main.py
sfml game/Project_P/: CMakeLists.txt  README.md  description.md  описание.txt
sfml game/Project_P/Project_P/: Animator.cpp  Bullet.cpp  CMakeLists.txt  Enemy.cpp  GameEngine.cpp  Map.cpp  Player.cpp  Sound.cpp  Wave.cpp
sql/project/: README.md
с++/: Deque.cpp  List and StackAllocator.cpp  SharedPtr.cpp  Stack.cpp  String.cpp  Sum of products.cpp  Tuple.cpp
(+87 files in other folders)
